k8/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-flask-app-deployment
  labels:
    app: my-flask-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: my-flask-app
  template:
    metadata:
      labels:
        app: my-flask-app
    spec:
      containers:
      - name: my-flask-app-container
        image: my-flask-app
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
          protocol: TCP
