k8/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-flask-app-service
spec:
  type: ClusterIP
  selector:
    app: my-flask-app
  ports:
    - port: 5000
